--- a/hw5-frontend/package.json
+++ b/hw5-frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack --progress --colors; cd ./dist/; python -m SimpleHTTPServer",
+    "start": "webpack --progress --colors; cd ./dist/ ; python -m SimpleHTTPServer",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "simi",
@@ -14,6 +14,10 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
     "webpack": "^1.13.2"
+  },
+  "dependencies": {
+    "redux": "^3.6.0"
   }
 }
