--- a/hw5/package.json
+++ b/hw5/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack --progress --colors; cd ./dist/ ; python -m SimpleHTTPServer",
+    "start": "webpack --progress --colors; cd ./dist ; python -m SimpleHTTPServer",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "simi",
